<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/green_light"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_detail"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/architect" />

    <TextView
        android:id="@+id/detail_hi"
        android:layout_width="192dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/hi"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_detail"
        app:layout_constraintTop_toTopOf="@+id/img_detail"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/im"
        android:textAlignment="textStart"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_detail"
        app:layout_constraintTop_toBottomOf="@+id/detail_hi" />

    <TextView
        android:id="@+id/detail_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/mbti_type"
        app:layout_constraintEnd_toEndOf="@+id/detail_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/detail_name"
        app:layout_constraintTop_toBottomOf="@+id/detail_name" />


    <FrameLayout
        android:id="@+id/frame_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:padding="16dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_detail"
        app:layout_constraintVertical_bias="1.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/detail_intro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/who_are_they"
                    android:textColor="@color/yellow_primary"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/detail_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/detail_intro"
                    app:layout_constraintStart_toStartOf="@+id/detail_intro"
                    app:layout_constraintTop_toBottomOf="@+id/detail_intro" />

                <TextView
                    android:id="@+id/detail_you_may"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/you_may_know"
                    android:textColor="@color/yellow_primary"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_description" />

                <TextView
                    android:id="@+id/detail_people"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"

                    android:text="@string/people_mbti"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/detail_intro"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/detail_intro"
                    app:layout_constraintTop_toBottomOf="@+id/detail_you_may" />

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_people"
                    app:layout_constraintVertical_bias="1.0"
                    tools:layout_editor_absoluteX="0dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>



    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>